--- a/client/ansa/package-manager/views/package-manager-widget.html
+++ b/client/ansa/package-manager/views/package-manager-widget.html
@@ -20,9 +20,9 @@
                         </span>
                         <span class="headline" ng-hide="pitem.headline || pitem.slugline" translate>Blank headline received</span>
                     </div>
-                    <div class="content-item__action dropdown" dropdown dropdown-append-to-body sd-dropdown-position-absolute>
-                        <button dropdown-toggle><i class="icon-dots-vertical"></i></button>
-                        <ul class="dropdown dropdown__menu more-activity-menu">
+                    <div class="content-item__action dropdown" dropdown-append-to-body dropdown>
+                        <button class="dropdown__toggle" dropdown__toggle><i class="icon-dots-vertical"></i></button>
+                        <ul class="dropdown__menu more-activity-menu">
                             <li ng-repeat="group in groupList">
                                 <button ng-click="ctrl.addToPackage(pitem, group)">{{group}}</button>
                             </li>
