add changes from ansa.priv

--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -267,6 +267,10 @@ div[data-field="genre"] .dropdown--dropleft .dropdown__menu {
     color: inherit;
 }
 
+.upper {
+  text-transform: uppercase;
+}
+
 .item-association { 
 //	border: 2px dashed rgba(150, 150, 150, 0.3); 
 	background-color: rgba(150, 150, 150, 0.06); 
