--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -256,7 +256,7 @@ div[data-field="genre"] .dropdown--dropleft .dropdown__menu {
     line-height: 100% !important;
     position: sticky;
     top: 0;
-    z-index: 9999999;
+    z-index: 10;
 }
 
 .main-article.sd-editor--body-large .Editor3-root .DraftEditor-editorContainer {
