change whitespace handling in editor3
SDANSA-482

--- a/client/ansa/styles.scss
+++ b/client/ansa/styles.scss
@@ -243,6 +243,10 @@ div[data-field="genre"] .dropdown--dropleft .dropdown__menu {
     }
 }
 
+.Editor3-editor .public-DraftStyleDefault-block {
+    white-space: break-spaces;
+}
+
 // sticky editor toolbar
 .Editor3-controls {
     width: 100%;
